Fix styling to work with differences of Chrome/Firefox/Safari on Files dialog.  Most of the oddities showed up on Safari, where the height of the form-control was treated differently.

--- a/assets/css/sass/_datasource.sass
+++ b/assets/css/sass/_datasource.sass
@@ -2,13 +2,12 @@
 
 #url-input
   padding: 6px 4px !important
-  font-size: 10px
-  line-height: 2
+  font-size: 12px
+  
 
 #url-tbi-input
   padding: 6px 4px !important
-  font-size: 10px
-  line-height: 2  
+  font-size: 12px
 
 #bam-url-input-group
   visibility: hidden
@@ -17,13 +16,12 @@
 
 #bam-url-input
   padding: 6px 4px !important
-  font-size: 10px
-  line-height: 2
+  font-size: 12px
+
 
 #bai-url-input
   padding: 6px 4px !important
-  font-size: 10px
-  line-height: 2
+  font-size: 12px
 
 .file
   padding-left: 10px
@@ -125,6 +123,23 @@
 
     input
       width: 200px !important
+
+  #unaffected-sibs-box
+    .selectize-input
+      input
+        width: inherit !important
+
+      &.has-items
+        input
+          width: initial !important
+  #affected-sibs-box
+    .selectize-input
+      input
+        width: inherit !important
+
+      &.has-items
+        input
+          width: initial !important
 
   .form-group
     margin-top: -5px
