--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1814,7 +1814,7 @@ inputinput:-moz-placeholder {
   font-size: 13px;
   padding-top: 2px;
   padding-bottom: 2px;
-  margin-left: -40px;
+  margin-left: -55px;
   margin-bottom: 2px;
   margin-top: 2px; }
 
@@ -2193,26 +2193,22 @@ inputinput:-moz-placeholder {
 
 #url-input {
   padding: 6px 4px !important;
-  font-size: 10px;
-  line-height: 2; }
+  font-size: 12px; }
 
 #url-tbi-input {
   padding: 6px 4px !important;
-  font-size: 10px;
-  line-height: 2; }
+  font-size: 12px; }
 
 #bam-url-input-group {
   visibility: hidden; }
 
 #bam-url-input {
   padding: 6px 4px !important;
-  font-size: 10px;
-  line-height: 2; }
+  font-size: 12px; }
 
 #bai-url-input {
   padding: 6px 4px !important;
-  font-size: 10px;
-  line-height: 2; }
+  font-size: 12px; }
 
 .file {
   padding-left: 10px;
@@ -2301,6 +2297,14 @@ inputinput:-moz-placeholder {
   width: 200px; }
   #dataModal #vcf-sample-select-box input {
     width: 200px !important; }
+#dataModal #unaffected-sibs-box .selectize-input input {
+  width: inherit !important; }
+#dataModal #unaffected-sibs-box .selectize-input.has-items input {
+  width: initial !important; }
+#dataModal #affected-sibs-box .selectize-input input {
+  width: inherit !important; }
+#dataModal #affected-sibs-box .selectize-input.has-items input {
+  width: initial !important; }
 #dataModal .form-group {
   margin-top: -5px; }
 #dataModal .form-group-header {
